--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,319 +1,325 @@
 <% if @group.nil? %>
-	<% if @path == '/' %>
-		<% provide(:title, "My lists") %>
-	<% else %>
-		<% provide(:title, "List") %>
-	<% end %>
-	<h1><%= @path %></h1>
+<% if @path == '/' %>
+<% provide(:title, "My lists") %>
 <% else %>
-	<% provide(:title, "List") %>
-	<h1><%= "[#{@group.name}]#{@path}" %></h1>
+<% provide(:title, "List") %>
+<% end %>
+<h1><%= @path %></h1>
+<% else %>
+<% provide(:title, "List") %>
+<h1><%= "[#{@group.name}]#{@path}" %></h1>
 <% end %>
 
 
 <div class="row">
-  <div class="col-md-12">
-    <div class="btn-group">
-      <a class="btn btn-default dropdown-toggle" data-toggle="dropdown" href="#">
-        Action <i class="glyphicon-cog"></i>
-        <span class="caret"></span>
-      </a>
-      <ul class="dropdown-menu">
+	<div class="col-md-12">
+		<div class="btn-group">
+			<a class="btn btn-default dropdown-toggle" data-toggle="dropdown" href="#">
+				Action <i class="glyphicon-cog"></i>
+				<span class="caret"></span>
+			</a>
+			<ul class="dropdown-menu">
 				<% if @group && (not current_user.is_member?(@group)) %>
-		      <li>
-					  <%= link_to "Add the group \"#{@group.name}\" to your groups", group_add_path %>
-				  </li>
-				<% elsif @group && current_user.is_member?(@group)%>
-	      <li>
-				  <%= link_to "Manage the group", group_manage_general_path %>
-			  </li>
-	      <li>
-				  <%= link_to "Add people to the group", group_addpeople_path %>
+				<li>
+					<%= link_to "Add the group \"#{@group.name}\" to your groups", group_add_path %>
 				</li>
-	      <li>
-				  <%= link_to "Leave the group", group_leave_path, data: { confirm: "Do you really want to leave the group \"#{@group.name}\"?" } %>
-			  </li>
+				<% elsif @group && current_user.is_member?(@group)%>
+				<li>
+					<%= link_to "Manage the group", group_manage_general_path %>
+				</li>
+				<li>
+					<%= link_to "Add people to the group", group_addpeople_path %>
+				</li>
+				<li>
+					<%= link_to "Leave the group", group_leave_path, data: { confirm: "Do you really want to leave the group \"#{@group.name}\"?" } %>
+				</li>
 				<% end %>
-        <% unless @list.nil? %>
-          <li>
-          <% if @list.parent.nil? %>
-            <%= link_to "Go back to /", path_for_root_list(@group) %>
-          <% else %>
-            <%= link_to "Go back to #{@list.parent.path}", path_for_list(@list.parent,@group) %>
-          <% end %>
-          </li>
-          <% unless @moving %>
-            <li>
-            <%= link_to "Move", path_for_list_moving(@list,@group) %>
-            </li>
-          <% end %>
-          <li>
-          <%= link_to "Export", path_for_list_export(@list,@group) %>
-          </li>
-					<li>
+				<% unless @list.nil? %>
+				<li>
+					<% if @list.parent.nil? %>
+					<%= link_to "Go back to /", path_for_root_list(@group) %>
+					<% else %>
+					<%= link_to "Go back to #{@list.parent.path}", path_for_list(@list.parent,@group) %>
+					<% end %>
+				</li>
+				<% unless @moving %>
+				<li>
+					<%= link_to "Move", path_for_list_moving(@list,@group) %>
+				</li>
+				<% end %>
+				<li>
+					<%= link_to "Export", path_for_list_export(@list,@group) %>
+				</li>
+				<li>
 					<%= link_to "Delete list", path_for_list(@list, @group), method: :delete, data: {confirm: "You sure?"} %>
-					</li>
-        <% end %>
-        <% if @new_list.nil? %>
-          <li>
-          <%= link_to 'New list here', path_for_new_list(@list, @group) %>
-          </li>
-        <% end %>
+				</li>
+				<% end %>
+				<% if @new_list.nil? %>
+				<li>
+					<%= link_to 'New list here', path_for_new_list(@list, @group) %>
+				</li>
+				<% end %>
 
-      </ul>
-    </div>
+			</ul>
+		</div>
 
-    <% if @moving %>
-      <%= form_for :dest, url: path_for_list_move(@list,@group) do |f| %>
-        <%= f.label :list_id, "Destination" %>
-        <% if @list.parent.nil? %>
-          <%= f.collection_select("list_id", @user.lists_outside(@list), :id, :path) %>
-        <% else %>
-          <%= f.collection_select("list_id", @user.lists_outside(@list), :id, :path, prompt: "/") %>
-        <% end %>
-        <br />
-        <%= f.submit "Move", class: "btn btn-default" %>
-      <% end %>
-    <% end %>
+		<% if @moving %>
+		<%= form_for :dest, url: path_for_list_move(@list,@group) do |f| %>
+		<%= f.label :list_id, "Destination" %>
+		<% if @list.parent.nil? %>
+		<%= f.collection_select("list_id", @user.lists_outside(@list), :id, :path) %>
+		<% else %>
+		<%= f.collection_select("list_id", @user.lists_outside(@list), :id, :path, prompt: "/") %>
+		<% end %>
+		<br />
+		<%= f.submit "Move", class: "btn btn-default" %>
+		<% end %>
+		<% end %>
 
-    <% unless @new_list.nil? %>
-      <%= form_for @new_list, url: path_to_create_list(@list, @group) do |f| %>
-        <%= f.label :name %>
-        <%= f.text_field :name %>
-		    <%= f.label :language_1 %>
-		    <select name="language1_id" id="language1_id">
-			    <% Language.all.each do |l|%>
-				    <% if l == @lang1 %>
-	  			    <option selected value=<%=l.id%>> <%= l.name %></option>
-				    <% else %>
-  			      <option value=<%=l.id%>> <%= l.name %></option>
-				    <% end %>
-	        <% end %>
-		    </select>
-		    <%= f.label :language_2 %>
-		    <select name="language2_id" id="language2_id">
-			    <% Language.all.each do |l|%>
-				    <% if l == @lang2 %>
-	  			    <option selected value=<%=l.id%>> <%= l.name %></option>
-				    <% else %>
-  			      <option value=<%=l.id%>> <%= l.name %></option>
-				    <% end %>
-	        <% end %>
-		    </select>
+		<% unless @new_list.nil? %>
+		<%= form_for @new_list, url: path_to_create_list(@list, @group) do |f| %>
+		<%= f.label :name %>
+		<%= f.text_field :name %>
+		<%= f.label "The language you want to learn:" %>
+		<select name="language1_id" id="language1_id">
+			<% Language.all.each do |l|%>
+			<% if l == @lang1 %>
+			<option selected value=<%=l.id%>> <%= l.name %></option>
+			<% else %>
+			<option value=<%=l.id%>> <%= l.name %></option>
+			<% end %>
+			<% end %>
+		</select>
+		<%= f.label "Your native language:" %>
+		<select name="language2_id" id="language2_id">
+			<% Language.all.each do |l|%>
+			<% if l == @lang2 %>
+			<option selected value=<%=l.id%>> <%= l.name %></option>
+			<% else %>
+			<option value=<%=l.id%>> <%= l.name %></option>
+			<% end %>
+			<% end %>
+		</select>
 
-				<%= f.label :public_level %>
-		    <select name="public_level" id="public_level">
-	  	    <option value=0>Private</option>
-	  	    <option value=10>Public</option>
-		    </select>
+		<%= f.label :public_level %>
+		<select name="public_level" id="public_level">
+			<option value=0>Private</option>
+			<option value=10>Public</option>
+		</select>
 
-        <br />
-        <%= f.submit "Create list here", class: "btn btn-default" %>
-      <% end %>
-    <% end %>
+		<br />
+		<%= f.submit "Create list here", class: "btn btn-default" %>
+		<% end %>
+		<% end %>
 
 
 		<% if @export %>
 
 		<%= form_for :export, url: path_for_list_exporting(@list,@group), method: :get do |f| %>
-		  <%= hidden_field_tag 'export[trains]', 0 %>
-		  <%= hidden_field_tag 'export[results]', 0 %>
-		  <%= hidden_field_tag 'export[sub_lists]', 0 %>
-			Exportation format:
-	    <select onchange="export_select_change()" id="export_select" name="export[format]">
-  	    <option value=0>.ovoc</option>
-  	    <option value=1>.ods</option>
-  	    <option value=2>.xlsx</option>
-  	    <option value=3>.pdf</option>
-  	    <option value=4>.txt</option>
-	    </select>
-			<br />
-		  Save trains?    : <%= check_box_tag "export[trains]", "1", true, name: :export_options, disabled: true %>
-			<br />
-			Save your success results?    : <%= check_box_tag "export[results]", "1", true, name: :export_options, disabled: true %>
-			<br />
-		  Export sub lists?    : <%= check_box_tag "export[sub_lists]", "1", true, name: :export_options, disabled: true %>
-			<br />
-		  <%= f.submit "Export!"%>
+		<%= hidden_field_tag 'export[trains]', 0 %>
+		<%= hidden_field_tag 'export[results]', 0 %>
+		<%= hidden_field_tag 'export[sub_lists]', 0 %>
+		Exportation format:
+		<select onchange="export_select_change()" id="export_select" name="export[format]">
+			<option value=0>.ovoc</option>
+			<option value=1>.ods</option>
+			<option value=2>.xlsx</option>
+			<option value=3>.pdf</option>
+			<option value=4>.txt</option>
+		</select>
+		<br />
+		Save trains?    : <%= check_box_tag "export[trains]", "1", true, name: :export_options, disabled: true %>
+		<br />
+		Save your success results?    : <%= check_box_tag "export[results]", "1", true, name: :export_options, disabled: true %>
+		<br />
+		Export sub lists?    : <%= check_box_tag "export[sub_lists]", "1", true, name: :export_options, disabled: true %>
+		<br />
+		<%= f.submit "Export!"%>
 		<% end %>
 
 
 		<% end %>
 
-<!-- url: list_exporting_path(@list) -->
+		<!-- url: list_exporting_path(@list) -->
 
-    <h2>Sublists</h2>
-    <% if @childs.empty? %>
-      <p>No sublist.</p>
-    <% else %>
-      <ul>
-        <% @childs.each do |list| %>
-          <li>
-          <%= link_to list.name, path_for_list(list,@group) %> <%= image_tag("public16.png", :alt => "rss feed") if list.public_level == 10%>
-
-				</li>
-        <% end %>
-      </ul>
-    <% end %>
-
-    <% unless @list.nil? %>
-      <h2>Words</h2>
-      <% if @wordsets.empty? %>
-        <p>No word.</p>
-      <% else %>
+		<h2>Sublists</h2>
+		<% if @childs.empty? %>
+		<p>No sublist.</p>
+		<% else %>
 		<section class="col-md-12 table-responsive">
-		  <table class="table table-bordered table-striped table-condensed">
-		    <thead>
-			  <tr>
-			    <th>Nb</th>
-			    <th><%= @language1.name %></th>
-			    <th><%= @language2.name %></th>
-					<th>Success ratio q->a (%)</th>
-					<th>Success ratio q<-a (%)</th>
-			  </tr>
-			</thead>
-		    <tbody>
-		      <% @wordsets.each do |w| %>
-  	        <tr>
-							<td><%= @i %></td>
-		        	<td><%= w.word.content %></td>
-		        	<td><%= w.translations(@language2) %></td>
-							<td><%= w.success_ratio_qa.to_i %></td>
-							<td><%= w.success_ratio_aq.to_i %></td>
-	  		    </tr>
-						<% @i = @i+1%>
-		      <% end %>
-		    </tbody>
-		  </table>
-	    </section>
+			<table class="table table-bordered table-striped table-condensed">
+				<ul>
+					<% @childs.each do |list| %>
+					<li>
+						<%= link_to list.name, path_for_list(list,@group) %> <%= image_tag("public16.png", :alt => "rss feed") if list.public_level == 10%>
 
-			<%= will_paginate @wordsets, param_name: :page_ws %>
+					</li>
+					<% end %>
+				</ul>
+			</table>
+		</section>
+		<% end %>
 
-      <% end %>
+		<% unless @list.nil? %>
+		<h2>Words</h2>
+		<% if @wordsets.empty? %>
+		<p>No word.</p>
+		<% else %>
+		<section class="col-md-12 table-responsive">
+			<table class="table table-bordered table-striped table-condensed">
+				<thead>
+					<tr>
+						<th>Nb</th>
+						<th><%= @language1.name %></th>
+						<th><%= @language2.name %></th>
+						<th>Success ratio q->a (%)</th>
+						<th>Success ratio q<-a (%)</th>
+					</tr>
+				</thead>
+				<tbody>
+					<% @wordsets.each do |w| %>
+					<tr>
+						<td><%= @i %></td>
+						<td><%= w.word.content %></td>
+						<td><%= w.translations(@language2) %></td>
+						<td><%= w.success_ratio_qa.to_i %></td>
+						<td><%= w.success_ratio_aq.to_i %></td>
+					</tr>
+					<% @i = @i+1%>
+					<% end %>
+				</tbody>
+			</table>
+		</section>
+
+		<%= will_paginate @wordsets, param_name: :page_ws %>
+
+		<% end %>
 
 
-	  <%= link_to "Edit list", path_for_edit_list(@list,@group), class: "btn btn-default btn-lg btn-primary"  %>
+		<%= link_to "Edit list", path_for_edit_list(@list,@group), class: "btn btn-default btn-lg btn-primary"  %>
 		<%= link_to "New train", new_train_path(list_id:@list.id), class: "btn btn-default btn-lg btn-primary" %>
 
-    <% end %>
-  </div>
+		<% end %>
 
 
 
 
-	<% if not (@trains.nil? or @trains.empty?) %>
+		<% if not (@trains.nil? or @trains.empty?) %>
 
 
-  <h2>Trains</h2>
-	<section class="col-md-12 table-responsive">
-	  <table class="table table-bordered table-striped table-condensed">
-	    <thead>
-		  <tr>
-		    <th>Nb</th>
-				<th>Finalized date</th>
-				<th>Success ratio</th>
-				<th>Progress</th>
-				<th>Delete</th>
-		  </tr>
-		  </thead>
-	    <tbody>
-				<% @i = 1 %>
-	      <% @trains.each do |t| %>
-	         <tr>
-	        	<td><%= @i %></td>
-	        	<td><%= t.updated_at %></td>
+		<h2>Trains</h2>
+		<section class="col-md-12 table-responsive">
+			<table class="table table-bordered table-striped table-condensed">
+				<thead>
+					<tr>
+						<th>Nb</th>
+						<th>Finalized date</th>
+						<th>Success ratio</th>
+						<th>Progress</th>
+						<th>Delete</th>
+					</tr>
+				</thead>
+				<tbody>
+					<% @i = 1 %>
+					<% @trains.each do |t| %>
+					<tr>
+						<td><%= @i %></td>
+						<td><%= t.updated_at %></td>
 						<td><%= t.success_ratio %></td>
 						<td><% if t.finalized%>
-									<%= link_to "summary", train_summary_path(t) %></td>
-							  <% else %>
-								  <%= link_to "continue", train_path(t) %></td>
-								<% end %>
+							<%= link_to "summary", train_summary_path(t) %>
+							<% else %>
+							<%= link_to "continue", train_path(t) %>
+							<% end %>
+						</td>
 						<td><%= link_to "delete", train_path(t, {list_id: @list.id}),
-										controller: :trains, method: :delete %></td>
-  		    </tr>
+							controller: :trains, method: :delete %>
+						</td>
+					</tr>
 					<% @i = @i +1 %>
-	      <% end %>
-	    </tbody>
-	  </table>
-    </section>
+					<% end %>
+				</tbody>
+			</table>
+		</section>
 
-	<%= will_paginate @trains, param_name: :page_trains %>
-
-
-	<% end %>
+		<%= will_paginate @trains, param_name: :page_trains %>
 
 
-
-
-	<% if false%>
-  <% if not @list.nil? and @list.owner == current_user %>
-    <div class="col-md-6">
-      <h2>New links</h2>
-      <p>
-      Quickly add new words to this list while ensuring your
-      requested link is present.
-      If the words or the link doesn't exist, it will be added.
-      </p>
-      <%= render 'links/new' %>
-    </div>
-  <% end %>
-	<% end %>
+		<% end %>
 
 
 
 
-	<% if @path == "/" && @group.nil? %>
-	<h2>Groups
-  <div class="btn-group">
-    <a class="btn btn-default dropdown-toggle" data-toggle="dropdown" href="#">
-      Action <i class="glyphicon-cog"></i>
-      <span class="caret"></span>
-    </a>
-    <ul class="dropdown-menu">
-      <li>
-			  <%= link_to "Create a new group", new_group_path %>
-		  </li>
-      <li>
-			  <%= link_to "Search for a public group", groupsearch_path %>
-		  </li>
-    </ul>
-  </div>
-	</h2>
+		<% if false%>
+		<% if not @list.nil? and @list.owner == current_user %>
+		<div class="col-md-6">
+			<h2>New links</h2>
+			<p>
+				Quickly add new words to this list while ensuring your
+				requested link is present.
+				If the words or the link doesn't exist, it will be added.
+			</p>
+			<%= render 'links/new' %>
+		</div>
+		<% end %>
+		<% end %>
 
-	<section class="col-md-12 table-responsive">
-	  <table class="table table-bordered table-striped table-condensed">
-			<% unless @groups_list.nil? %>
-			  <ul>
-						<% @groups_list.each do |f| %>
-					    <li>
-					      <%= link_to "#{f.name}", group_lists_path(f) %>
-					    </li>
-						<% end%>
+
+
+
+		<% if @path == "/" && @group.nil? %>
+		<h2>Groups
+			<div class="btn-group">
+				<a class="btn btn-default dropdown-toggle" data-toggle="dropdown" href="#">
+					Action <i class="glyphicon-cog"></i>
+					<span class="caret"></span>
+				</a>
+				<ul class="dropdown-menu">
+					<li>
+						<%= link_to "Create a new group", new_group_path %>
+					</li>
+					<li>
+						<%= link_to "Search for a public group", groupsearch_path %>
+					</li>
 				</ul>
-			<% else %>
+			</div>
+		</h2>
+
+		<section class="col-md-12 table-responsive">
+			<table class="table table-bordered table-striped table-condensed">
+				<% unless @groups_list.nil? %>
+				<ul>
+					<% @groups_list.each do |f| %>
+					<li>
+						<%= link_to "#{f.name}", group_lists_path(f) %>
+					</li>
+					<% end%>
+				</ul>
+				<% else %>
 				<p>You have no groups. Create one or wait for an invitation.</p>
-			<% end %>
-		</table>
-	</section>
-	<% end %>
+				<% end %>
+			</table>
+		</section>
+		<% end %>
+	</div>
 
 
 
 
 	<script>
 	function export_select_change() {
-	    var x = document.getElementById("export_select").value;
-			var TextElements = document.getElementsByName("export_options");
-			if (x == '0'){
-				for (var i = 0, max = TextElements.length; i < max; i++) {
-				    TextElements[i].disabled = true;
-						console.log('hey')
-				}
-			} else{
-				for (var i = 0, max = TextElements.length; i < max; i++) {
-				    TextElements[i].disabled = false;
-				}
+		var x = document.getElementById("export_select").value;
+		var TextElements = document.getElementsByName("export_options");
+		if (x == '0'){
+			for (var i = 0, max = TextElements.length; i < max; i++) {
+				TextElements[i].disabled = true;
+				console.log('hey')
 			}
+		} else{
+			for (var i = 0, max = TextElements.length; i < max; i++) {
+				TextElements[i].disabled = false;
+			}
+		}
 	}
 	</script>
 </div>
