--- a/app/views/registrations/new.html.erb
+++ b/app/views/registrations/new.html.erb
@@ -3,18 +3,34 @@
 
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
-	  <%= form_for @registration do |f| %>
-	    <%= label_tag :name, "Name" %>
-			<%= text_field_tag :name, nil, class: 'form-control' %>
+	  <%= form_for @registration, class:'form-horizontal' do |f| %>
+        <div class="form-group">
+          <%= label_tag :name, "Name", class: 'col-md-4 control-label' %>
+          <div class="col-md-8">
+            <%= text_field_tag :name, nil, class: 'form-control' %>
+          </div>
+        </div>
 		
-	    <%= f.label :email %>
-	    <%= f.text_field :email, class: 'form-control' %>
+        <div class="form-group">
+          <%= f.label :email, class: 'col-md-4 control-label' %>
+          <div class="col-md-8">
+            <%= f.text_field :email, class: 'form-control' %>
+          </div>
+        </div>
 
-	    <%= f.label :password %>
-	    <%= f.password_field :password, class: 'form-control' %>
+        <div class="form-group">
+          <%= f.label :password, class: 'col-md-4 control-label' %>
+          <div class="col-md-8">
+            <%= f.password_field :password, class: 'form-control' %>
+          </div>
+        </div>
 
-	    <%= f.label :password_confirmation, "Confirm password" %>
-	    <%= f.password_field :password_confirmation, class: 'form-control' %>
+        <div class="form-group">
+          <%= f.label :password_confirmation, "Confirm password", class: 'col-md-4 control-label' %>
+          <div class="col-md-8">
+            <%= f.password_field :password_confirmation, class: 'form-control' %>
+          </div>
+        </div>
 	    <br />
 	    <%= f.submit 'Register', class: "btn btn-default btn-lg btn-primary" %>
     <% end %>
